// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContentReference Component > should render html content 1`] = `
<DocumentFragment>
  <section
    class="mainContentReference"
  >
    <h1
      class="__fce-header-1"
    >
      header 1
    </h1>
  </section>
</DocumentFragment>
`;

exports[`MainContentReference Component > should render markdown content 1`] = `
<DocumentFragment>
  <section
    class="mainContentReference"
  >
    <h1
      class="__fce-header-1"
    >
      header ## subheader ### subsubheader
    </h1>
  </section>
</DocumentFragment>
`;
